--- a/parser/Makefile
+++ b/parser/Makefile
@@ -204,6 +204,7 @@ clean:
 	-$(RM) -rf $(OBJDIR)
 	-$(RM) -rf $(MODDIR)
 	-$(RM) $(INCDIR)/*.mod
+	-$(RM) $(LIB)
 
 # dependencies file
 include Makefile-deps
