--- a/common/Makefile-deps
+++ b/common/Makefile-deps
@@ -6,4 +6,6 @@ eis_named_store.o: eis_named_store.F90
 eis_ordered_store.o: eis_ordered_store.F90
 eis_key_value_store.o: eis_key_value_store.F90 eis_constants.o eis_header.o \
   eis_named_store.o eis_utils.o
+eis_string_store.o: eis_string_store.F90 eis_constants.o eis_ordered_store.o \
+  eis_header.o eis_utils.o
 eis_utils.o: eis_utils.F90 eis_constants.o
