Added deck function prototypes

--- a/deck/Makefile
+++ b/deck/Makefile
@@ -12,6 +12,7 @@ LIBDIR = lib
 INCDIR = include
 MODDIR = modules
 COMDIR = ../common/include
+PARDIR = ../parser/include
 
 CPU = p7
 AR  = ar
@@ -38,7 +39,7 @@ ifeq ($(strip $(COMPILER)),pgi)
     FFLAGS += -Mprof=func,lines
   endif
   FFLAGS += -Mnodefaultunit -Ktrap=fp -Mdclchk -tp $(CPU) -mcmodel=medium
-  MODFLAG := -I/usr/include -I$(OBJDIR) -I$(MODDIR) -I$(COMDIR)
+  MODFLAG := -I/usr/include -I$(OBJDIR) -I$(MODDIR) -I$(COMDIR) -I$(PARDIR)
   MODULEFLAG := $(MODFLAG) -module $(MODDIR)
   FC = pgf90
 endif
@@ -64,7 +65,7 @@ ifeq ($(strip $(COMPILER)),intel)
     FFLAGS += -p
   endif
   FFLAGS += -fpe0 -mcmodel=medium -heap-arrays 64
-  MODFLAG := -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR)
+  MODFLAG := -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR) -I$(PARDIR)
   MODULEFLAG := $(MODFLAG) -module $(MODDIR)
   FC = ifort
 endif
@@ -108,7 +109,7 @@ ifeq ($(strip $(COMPILER)),gfortran)
     FFLAGS += -p
   endif
   FFLAGS += -frecord-marker=4
-  MODFLAG := -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR)
+  MODFLAG := -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR) -I$(PARDIR)
   ifneq ($(wildcard /usr/include/.),)
     MODFLAG := -I/usr/include $(MODFLAG)
   endif
@@ -127,7 +128,7 @@ ifeq ($(strip $(COMPILER)),ibm)
     #FFLAGS = -O0 -qarch=qp -qtune=qp
     #FFLAGS = -qthreaded -qsmp=noauto -qsmp=omp # Hybrid stuff
   endif
-  MODFLAG := -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR)
+  MODFLAG := -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR) -I$(PARDIR)
   MODULEFLAG := $(MODFLAG) -qmoddir=$(MODDIR)
   FC = xlf2003
 
@@ -142,7 +143,7 @@ ifeq ($(strip $(COMPILER)),cray)
   ifeq ($(strip $(MODE)),debug)
     FFLAGS = -O0 -g -ea -ec -eC -eD -eI -en -hfp_trap -Ktrap=fp -m0 -M1438,7413
   endif
-  MODFLAG := -em -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR)
+  MODFLAG := -em -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR) -I$(PARDIR)
   MODULEFLAG := $(MODFLAG) -J$(MODDIR)
   FC = ftn
 endif
