Added interpolate function

--- a/common/Makefile-deps
+++ b/common/Makefile-deps
@@ -10,3 +10,4 @@ eis_key_value_store.o: eis_key_value_store.F90 eis_constants.o eis_header.o \
 eis_string_store.o: eis_string_store.F90 eis_constants.o eis_ordered_store.o \
   eis_header.o eis_utils.o
 eis_utils.o: eis_utils.F90 eis_constants.o
+eis_algorithm.o: eis_algorithm.F90 eis_constants.o
