--- a/common/Makefile-deps
+++ b/common/Makefile-deps
@@ -1,7 +1,7 @@
 eis_constants.o:eis_constants.F90
 eis_error.o: eis_error.F90 eis_constants.o eis_header.o eis_key_value_store.o \
   eis_utils.o
-eis_header.o: eis_header.F90 eis_constants.o
+eis_header.o: eis_header.F90 eis_constants.o eis_utils.o
 eis_named_store.o: eis_named_store.F90 eis_ordered_store.o
 eis_numbered_store.o: eis_numbered_store.F90
 eis_ordered_store.o: eis_ordered_store.F90
