--- a/common/Makefile-deps
+++ b/common/Makefile-deps
@@ -1,13 +1,12 @@
 eis_constants.o:eis_constants.F90
-eis_error.o: eis_error.F90 eis_constants.o eis_header.o eis_key_value_store.o \
-  eis_utils.o
-eis_header.o: eis_header.F90 eis_constants.o eis_utils.o
+eis_error.o: eis_error.F90 eis_constants.o eis_key_value_store.o eis_utils.o
+eis_header.o: eis_header.F90 eis_constants.o eis_utils.o eis_algorithm.o
 eis_named_store.o: eis_named_store.F90 eis_ordered_store.o
 eis_numbered_store.o: eis_numbered_store.F90
 eis_ordered_store.o: eis_ordered_store.F90
-eis_key_value_store.o: eis_key_value_store.F90 eis_constants.o eis_header.o \
+eis_key_value_store.o: eis_key_value_store.F90 eis_constants.o \
   eis_named_store.o eis_utils.o eis_string_store.o
 eis_string_store.o: eis_string_store.F90 eis_constants.o eis_ordered_store.o \
-  eis_header.o eis_utils.o
+  eis_utils.o
 eis_utils.o: eis_utils.F90 eis_constants.o
 eis_algorithm.o: eis_algorithm.F90 eis_constants.o
