--- a/deck/Makefile-deps
+++ b/deck/Makefile-deps
@@ -1,6 +1,5 @@
 eis_deck_text_parser.o:eis_deck_text_parser.F90
 eis_deck_functions.o:eis_deck_functions.F90
-eis_deck_definition.o:eis_deck_definition.F90 eis_deck_functions.o \
-  eis_deck_header.o
-eis_deck_text.o: eis_deck_text.F90 eis_deck_definition.o eis_deck_header.o
-eis_deck_header.o:eis_deck_header.F90
+eis_deck_definition.o:eis_deck_definition.F90 eis_deck_functions.o
+eis_deck_text.o: eis_deck_text.F90 eis_deck_definition.o
+eis_deck_header.o:eis_deck_header.F90 eis_deck_definition.o eis_deck_text.o
