Finished deck caller

--- a/deck/Makefile
+++ b/deck/Makefile
@@ -49,6 +49,9 @@ ifeq ($(strip $(COMPILER)),pgi)
   MODFLAG := -I/usr/include -I$(OBJDIR) -I$(MODDIR) -I$(COMDIR) -I$(PARDIR)
   MODULEFLAG := $(MODFLAG) -module $(MODDIR)
   FC = pgf90
+  ifeq ($(strip $(TYPE)), library)
+    FFLAGS += -fPIC
+  endif
 endif
 
 # Intel
@@ -75,6 +78,9 @@ ifeq ($(strip $(COMPILER)),intel)
   MODFLAG := -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR) -I$(PARDIR)
   MODULEFLAG := $(MODFLAG) -module $(MODDIR)
   FC = ifort
+  ifeq ($(strip $(TYPE)), library)
+    FFLAGS += -fPIC
+  endif
 endif
 
 # gfortran
@@ -129,6 +135,9 @@ ifeq ($(strip $(COMPILER)),gfortran)
   MODULEFLAG := $(MODFLAG) -J$(MODDIR)
   INFO_FLAGS = -Wno-conversion -fno-range-check
   FC = gfortran
+  ifeq ($(strip $(TYPE)), library)
+    FFLAGS += -fPIC
+  endif
 endif
 
 # IBM Bluegene
@@ -150,6 +159,9 @@ ifeq ($(strip $(COMPILER)),ibm)
   else
     FC = xlf2003
   endif
+  ifeq ($(strip $(TYPE)), library)
+    FFLAGS += -qPIC
+  endif
 
   # IBM compiler needs a -WF to recognise preprocessor directives
   D = -WF,-D
@@ -165,6 +177,9 @@ ifeq ($(strip $(COMPILER)),cray)
   MODFLAG := -em -I/usr/include -I$(MODDIR) -I$(OBJDIR) -I$(COMDIR) -I$(PARDIR)
   MODULEFLAG := $(MODFLAG) -J$(MODDIR)
   FC = ftn
+  ifeq ($(strip $(TYPE)), library)
+    FFLAGS += -fPIC
+  endif
 endif
 
 PREPROFLAGS = $(DEFINES)
